# zeptohttpc

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yaml  clippy.yaml  msrv.yaml  test.yaml
examples/: print.rs
src/: body_reader.rs  body_writer.rs  chunked.rs  encoded.rs  error.rs  happy_eyeballs.rs  lib.rs  parse.rs  stream.rs  timeout.rs
tests/: redirects.rs  timeout.rs
