[package]
name = "zeptohttpc"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
json = ["serde", "serde_json"]
tls = ["rustls", "webpki", "webpki-roots"]

[dependencies]
encoding_rs = { version = "0.8", optional = true }
flate2 = { version = "1.0", optional = true }
http = "0.2"
httparse = "1.3"
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.16", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.18", optional = true }

[package.metadata.docs.rs]
all-features = true
