[package]
name = "zeptohttpc"
description = "minimal HTTP client using http and httparse crates"
version = "0.9.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
edition = "2018"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/zeptohttpc"
repository = "https://github.com/adamreichold/zeptohttpc"
keywords = ["http", "https", "client", "request", "response"]
categories = ["network-programming", "web-programming", "web-programming::http-client"]

[features]
json = ["serde", "serde_json"]
tls = ["tls-webpki-roots"]
tls-webpki-roots = ["rustls", "webpki-roots", "once_cell"]
tls-native-roots = ["rustls", "rustls-native-certs", "once_cell"]

[dependencies]
encoding_rs = { version = "0.8", optional = true }
flate2 = { version = "1.0", optional = true }
http = "1.0"
httparse = "1.3"
native-tls = { version = "0.2", optional = true }
once_cell = { version = "1.0", optional = true }
rustls = { version = "0.22", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls-native-certs = { version = "0.7", optional = true }

[package.metadata.docs.rs]
all-features = true
